--- a/index.html
+++ b/index.html
@@ -235,12 +235,19 @@
             text-transform: uppercase;
             letter-spacing: 1px;
         }
+
+        .loading-message {
+            text-align: center;
+            padding: 20px;
+            color: #666;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏪 Marketplace Offers</h1>
+            <h1>🛒 Marketplace Offers</h1>
             <p>Operational Categories & Visual Analytics</p>
         </div>
         
@@ -297,7 +304,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><strong>🎽 Physical Goods</strong></td>
+                                <td><strong>🎁 Physical Goods</strong></td>
                                 <td>BROIDR Caps, Tony's Chocolate, Got Bag, Ocean Bottle, Coffee</td>
                                 <td>
                                     <span class="status-badge status-review">2 Review</span>
@@ -591,249 +598,259 @@
     </div>
 
     <script>
-        // Chart.js configurations
-        const chartOptions = {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-                legend: {
-                    position: 'bottom',
-                    labels: {
-                        usePointStyle: true,
-                        padding: 20
-                    }
-                }
+        // Wait for Chart.js to load
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof Chart === 'undefined') {
+                document.querySelectorAll('.chart-container').forEach(container => {
+                    container.innerHTML = '<div class="loading-message">Charts loading... Please wait.</div>';
+                });
+                return;
             }
-        };
 
-        // Offer Type Distribution
-        const typeCtx = document.getElementById('typeChart').getContext('2d');
-        new Chart(typeCtx, {
-            type: 'doughnut',
-            data: {
-                labels: ['Physical Goods', 'Digital Services', 'Local Vouchers'],
-                datasets: [{
-                    data: [5, 3, 2],
-                    backgroundColor: ['#e74c3c', '#3498db', '#27ae60'],
-                    borderWidth: 0
-                }]
-            },
-            options: {
-                ...chartOptions,
+            // Chart.js configurations
+            const chartOptions = {
+                responsive: true,
+                maintainAspectRatio: false,
                 plugins: {
-                    ...chartOptions.plugins,
-                    title: {
-                        display: true,
-                        text: 'Offer Distribution by Type'
-                    }
-                }
-            }
-        });
-
-        // Complexity Distribution
-        const complexityCtx = document.getElementById('complexityChart').getContext('2d');
-        new Chart(complexityCtx, {
-            type: 'bar',
-            data: {
-                labels: ['Low', 'Medium', 'High'],
-                datasets: [{
-                    label: 'Number of Offers',
-                    data: [2, 4, 3],
-                    backgroundColor: ['#27ae60', '#f39c12', '#e74c3c'],
-                    borderRadius: 8
-                }]
-            },
-            options: {
-                ...chartOptions,
-                plugins: {
-                    ...chartOptions.plugins,
-                    title: {
-                        display: true,
-                        text: 'Implementation Complexity'
-                    }
-                },
-                scales: {
-                    y: {
-                        beginAtZero: true,
-                        ticks: {
-                            stepSize: 1
+                    legend: {
+                        position: 'bottom',
+                        labels: {
+                            usePointStyle: true,
+                            padding: 20
                         }
                     }
                 }
-            }
-        });
+            };
 
-        // Timeline Distribution
-        const timelineCtx = document.getElementById('timelineChart').getContext('2d');
-        new Chart(timelineCtx, {
-            type: 'line',
-            data: {
-                labels: ['Sept 2025', 'Oct 2025', 'Nov 2025', 'Dec 2025', 'Jan 2026', 'Feb 2026', 'Mar 2026'],
-                datasets: [
-                    {
-                        label: 'Planned Launches',
-                        data: [0, 1, 2, 1, 2, 1, 1],
-                        borderColor: '#3498db',
-                        backgroundColor: 'rgba(52, 152, 219, 0.1)',
-                        tension: 0.4,
-                        fill: true
-                    },
-                    {
-                        label: 'Cumulative Active',
-                        data: [0, 1, 3, 4, 6, 7, 8],
-                        borderColor: '#27ae60',
-                        backgroundColor: 'rgba(39, 174, 96, 0.1)',
-                        tension: 0.4,
-                        fill: true
-                    }
-                ]
-            },
-            options: {
-                ...chartOptions,
-                plugins: {
-                    ...chartOptions.plugins,
-                    title: {
-                        display: true,
-                        text: 'Launch Timeline Projection'
-                    }
+            // Offer Type Distribution
+            const typeCtx = document.getElementById('typeChart').getContext('2d');
+            new Chart(typeCtx, {
+                type: 'doughnut',
+                data: {
+                    labels: ['Physical Goods', 'Digital Services', 'Local Vouchers'],
+                    datasets: [{
+                        data: [5, 3, 2],
+                        backgroundColor: ['#e74c3c', '#3498db', '#27ae60'],
+                        borderWidth: 0
+                    }]
                 },
-                scales: {
-                    y: {
-                        beginAtZero: true,
-                        ticks: {
-                            stepSize: 1
+                options: {
+                    ...chartOptions,
+                    plugins: {
+                        ...chartOptions.plugins,
+                        title: {
+                            display: true,
+                            text: 'Offer Distribution by Type'
                         }
                     }
                 }
-            }
-        });
+            });
 
-        // Resource Requirements
-        const resourceCtx = document.getElementById('resourceChart').getContext('2d');
-        new Chart(resourceCtx, {
-            type: 'radar',
-            data: {
-                labels: ['Technical', 'Logistics', 'Partnership', 'Marketing', 'Legal', 'Operations'],
-                datasets: [{
-                    label: 'Resource Intensity',
-                    data: [85, 70, 90, 60, 75, 80],
-                    borderColor: '#9b59b6',
-                    backgroundColor: 'rgba(155, 89, 182, 0.1)',
-                    pointBackgroundColor: '#9b59b6',
-                    pointBorderColor: '#fff',
-                    pointBorderWidth: 2
-                }]
-            },
-            options: {
-                ...chartOptions,
-                plugins: {
-                    ...chartOptions.plugins,
-                    title: {
-                        display: true,
-                        text: 'Resource Requirements'
-                    }
+            // Complexity Distribution
+            const complexityCtx = document.getElementById('complexityChart').getContext('2d');
+            new Chart(complexityCtx, {
+                type: 'bar',
+                data: {
+                    labels: ['Low', 'Medium', 'High'],
+                    datasets: [{
+                        label: 'Number of Offers',
+                        data: [2, 4, 3],
+                        backgroundColor: ['#27ae60', '#f39c12', '#e74c3c'],
+                        borderRadius: 8
+                    }]
                 },
-                scales: {
-                    r: {
-                        beginAtZero: true,
-                        max: 100
-                    }
-                }
-            }
-        });
-
-        // CRC Integration
-        const crcCtx = document.getElementById('crcChart').getContext('2d');
-        new Chart(crcCtx, {
-            type: 'pie',
-            data: {
-                labels: ['CRC Enabled', 'EUR Only', 'Mixed/TBD'],
-                datasets: [{
-                    data: [6, 1, 2],
-                    backgroundColor: ['#2ecc71', '#e74c3c', '#f39c12'],
-                    borderWidth: 0
-                }]
-            },
-            options: {
-                ...chartOptions,
-                plugins: {
-                    ...chartOptions.plugins,
-                    title: {
-                        display: true,
-                        text: 'CRC Integration Status'
-                    }
-                }
-            }
-        });
-
-        // Strategy Matrix
-        const strategyCtx = document.getElementById('strategyMatrix').getContext('2d');
-        new Chart(strategyCtx, {
-            type: 'scatter',
-            data: {
-                datasets: [
-                    {
-                        label: 'High Priority',
-                        data: [
-                            {x: 9, y: 8, label: 'Urban Sports Club'},
-                            {x: 8, y: 9, label: 'Ocean Bottle'},
-                            {x: 7, y: 8, label: 'BROIDR Caps'}
-                        ],
-                        backgroundColor: '#e74c3c',
-                        borderColor: '#c0392b',
-                        pointRadius: 8
-                    },
-                    {
-                        label: 'Medium Priority',
-                        data: [
-                            {x: 7, y: 7, label: 'Got Bag'},
-                            {x: 6, y: 6, label: 'Fileverse'},
-                            {x: 8, y: 7, label: 'Tony\'s Chocolate'}
-                        ],
-                        backgroundColor: '#f39c12',
-                        borderColor: '#e67e22',
-                        pointRadius: 7
-                    },
-                    {
-                        label: 'Lower Priority',
-                        data: [
-                            {x: 5, y: 5, label: 'Venice AI'},
-                            {x: 6, y: 8, label: 'NGO Donations'}
-                        ],
-                        backgroundColor: '#95a5a6',
-                        borderColor: '#7f8c8d',
-                        pointRadius: 6
-                    }
-                ]
-            },
-            options: {
-                ...chartOptions,
-                plugins: {
-                    ...chartOptions.plugins,
-                    title: {
-                        display: true,
-                        text: 'Implementation Feasibility vs Gen Z Appeal Matrix'
-                    }
-                },
-                scales: {
-                    x: {
+                options: {
+                    ...chartOptions,
+                    plugins: {
+                        ...chartOptions.plugins,
                         title: {
                             display: true,
-                            text: 'Gen Z Appeal Score'
-                        },
-                        min: 0,
-                        max: 10
+                            text: 'Implementation Complexity'
+                        }
                     },
-                    y: {
-                        title: {
-                            display: true,
-                            text: 'Implementation Feasibility'
-                        },
-                        min: 0,
-                        max: 10
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            ticks: {
+                                stepSize: 1
+                            }
+                        }
                     }
                 }
-            }
+            });
+
+            // Timeline Distribution
+            const timelineCtx = document.getElementById('timelineChart').getContext('2d');
+            new Chart(timelineCtx, {
+                type: 'line',
+                data: {
+                    labels: ['Sept 2025', 'Oct 2025', 'Nov 2025', 'Dec 2025', 'Jan 2026', 'Feb 2026', 'Mar 2026'],
+                    datasets: [
+                        {
+                            label: 'Planned Launches',
+                            data: [0, 1, 2, 1, 2, 1, 1],
+                            borderColor: '#3498db',
+                            backgroundColor: 'rgba(52, 152, 219, 0.1)',
+                            tension: 0.4,
+                            fill: true
+                        },
+                        {
+                            label: 'Cumulative Active',
+                            data: [0, 1, 3, 4, 6, 7, 8],
+                            borderColor: '#27ae60',
+                            backgroundColor: 'rgba(39, 174, 96, 0.1)',
+                            tension: 0.4,
+                            fill: true
+                        }
+                    ]
+                },
+                options: {
+                    ...chartOptions,
+                    plugins: {
+                        ...chartOptions.plugins,
+                        title: {
+                            display: true,
+                            text: 'Launch Timeline Projection'
+                        }
+                    },
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            ticks: {
+                                stepSize: 1
+                            }
+                        }
+                    }
+                }
+            });
+
+            // Resource Requirements
+            const resourceCtx = document.getElementById('resourceChart').getContext('2d');
+            new Chart(resourceCtx, {
+                type: 'radar',
+                data: {
+                    labels: ['Technical', 'Logistics', 'Partnership', 'Marketing', 'Legal', 'Operations'],
+                    datasets: [{
+                        label: 'Resource Intensity',
+                        data: [85, 70, 90, 60, 75, 80],
+                        borderColor: '#9b59b6',
+                        backgroundColor: 'rgba(155, 89, 182, 0.1)',
+                        pointBackgroundColor: '#9b59b6',
+                        pointBorderColor: '#fff',
+                        pointBorderWidth: 2
+                    }]
+                },
+                options: {
+                    ...chartOptions,
+                    plugins: {
+                        ...chartOptions.plugins,
+                        title: {
+                            display: true,
+                            text: 'Resource Requirements'
+                        }
+                    },
+                    scales: {
+                        r: {
+                            beginAtZero: true,
+                            max: 100
+                        }
+                    }
+                }
+            });
+
+            // CRC Integration
+            const crcCtx = document.getElementById('crcChart').getContext('2d');
+            new Chart(crcCtx, {
+                type: 'pie',
+                data: {
+                    labels: ['CRC Enabled', 'EUR Only', 'Mixed/TBD'],
+                    datasets: [{
+                        data: [6, 1, 2],
+                        backgroundColor: ['#2ecc71', '#e74c3c', '#f39c12'],
+                        borderWidth: 0
+                    }]
+                },
+                options: {
+                    ...chartOptions,
+                    plugins: {
+                        ...chartOptions.plugins,
+                        title: {
+                            display: true,
+                            text: 'CRC Integration Status'
+                        }
+                    }
+                }
+            });
+
+            // Strategy Matrix
+            const strategyCtx = document.getElementById('strategyMatrix').getContext('2d');
+            new Chart(strategyCtx, {
+                type: 'scatter',
+                data: {
+                    datasets: [
+                        {
+                            label: 'High Priority',
+                            data: [
+                                {x: 9, y: 8, label: 'Urban Sports Club'},
+                                {x: 8, y: 9, label: 'Ocean Bottle'},
+                                {x: 7, y: 8, label: 'BROIDR Caps'}
+                            ],
+                            backgroundColor: '#e74c3c',
+                            borderColor: '#c0392b',
+                            pointRadius: 8
+                        },
+                        {
+                            label: 'Medium Priority',
+                            data: [
+                                {x: 7, y: 7, label: 'Got Bag'},
+                                {x: 6, y: 6, label: 'Fileverse'},
+                                {x: 8, y: 7, label: 'Tony\'s Chocolate'}
+                            ],
+                            backgroundColor: '#f39c12',
+                            borderColor: '#e67e22',
+                            pointRadius: 7
+                        },
+                        {
+                            label: 'Lower Priority',
+                            data: [
+                                {x: 5, y: 5, label: 'Venice AI'},
+                                {x: 6, y: 8, label: 'NGO Donations'}
+                            ],
+                            backgroundColor: '#95a5a6',
+                            borderColor: '#7f8c8d',
+                            pointRadius: 6
+                        }
+                    ]
+                },
+                options: {
+                    ...chartOptions,
+                    plugins: {
+                        ...chartOptions.plugins,
+                        title: {
+                            display: true,
+                            text: 'Implementation Feasibility vs Gen Z Appeal Matrix'
+                        }
+                    },
+                    scales: {
+                        x: {
+                            title: {
+                                display: true,
+                                text: 'Gen Z Appeal Score'
+                            },
+                            min: 0,
+                            max: 10
+                        },
+                        y: {
+                            title: {
+                                display: true,
+                                text: 'Implementation Feasibility'
+                            },
+                            min: 0,
+                            max: 10
+                        }
+                    }
+                }
+            });
         });
 
         // Tab switching functionality
